--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Personal Portfolio Website</title>
     <script src="https://kit.fontawesome.com/48810242d4.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./src/style.css">
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <div id="root"></div>
